# boniforce-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
deploy/: Caddyfile  Dockerfile  boniforce-mcp.service  docker-compose.traefik.yml  docker-compose.yml  install.sh
src/boniforce_mcp/: auth.py  boniforce_client.py  cli.py  config.py  crypto.py  rest_api.py  sectorbench_client.py  server.py  storage.py
tests/: conftest.py  test_boniforce_client.py  test_oauth_flow.py  test_rest_api.py  test_rest_sectorbench.py  test_sectorbench_client.py
