[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boniforce-mcp"
version = "0.1.0"
description = "Remote MCP server for the Boniforce API (ChatGPT + Claude connectors)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Boniforce" }]
dependencies = [
    "fastmcp>=2.5.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiosqlite>=0.20",
    "cryptography>=42",
    "authlib>=1.3",
    "starlette>=0.37",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "tenacity>=8.4",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "PyJWT[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
]

[project.scripts]
boniforce-mcp = "boniforce_mcp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/boniforce_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
